# etrieschman.github.io

./: .gitignore  .gitmodules  README.md  _quarto.yml  garden.qmd  index.qmd  papers.qmd  projects.qmd  pyproject.toml  styles.css
.github/workflows/: publish.yml
